fix: clients-slider outline & loop

--- a/template/css/slider.css
+++ b/template/css/slider.css
@@ -118,6 +118,15 @@
     }
 }
 
+.swiper-slide,
+.swiper-slide img,
+.swiper-slide:focus,
+.swiper-slide:active,
+.swiper-slide img:focus,
+.swiper-slide img:active {
+    outline: none;
+}
+
 .swiper-slide::after {
     @media (min-width: 768px) {
         content: "";
@@ -139,22 +148,20 @@
     height: 2rem;
     background: none;
     border: none;
+    outline: none;
     cursor: pointer;
-
-    @media (min-width: 768px) {
-        /* top: 3.3rem; */
-    }
-
-    @media (min-width: 1440px) {
-        /* top: 3.65rem; */
-    }
 }
 
-/* .swiper-button-prev */
+.swiper-button-prev:focus,
+.swiper-button-next:focus,
+.swiper-button-prev:active,
+.swiper-button-next:active {
+    outline: none;
+}
+
 .slider-top-prev {
     top: 2rem;
     left: 1.875rem;
-    /* transform: rotate(180deg); */
 
     @media (min-width: 768px) {
         top: 3.3rem;
@@ -171,7 +178,6 @@
     }
 }
 
-/* .swiper-button-next */
 .slider-top-next {
     top: 2rem;
     left: 7.125rem;
@@ -284,23 +290,29 @@
 
 .clients-slider__header {
     padding: 20px 0;
+
+    @media (min-width: 1024px) {
+        padding: 30px 0;
+    }
 }
 .arrow-prev,
 .arrow-next {
     left: auto;
     right: auto;
+    cursor: pointer;
+    z-index: 100;
 }
 
 .arrow-prev {
-    right: 3.5rem;
+    right: 4.5rem;
 
     @media (min-width: 480px) {
-        right: 4rem;
+        right: 5rem;
     }
 }
 
 .arrow-next {
-    right: 0;
+    right: 1rem;
 }
 
 .client-slide {
@@ -313,5 +325,14 @@
     width: 150px;
     height: 100px;
     object-fit: cover;
+}
+
+.client-slide,
+.client-slide img,
+.client-slide:focus,
+.client-slide:active,
+.client-slide img:focus,
+.client-slide img:active {
+    outline: none;
 }
 /* Clients-slider Swiper END */
