--- a/template/css/slider.css
+++ b/template/css/slider.css
@@ -8,8 +8,8 @@
 
     @media (min-width: 480px) {
         padding: 3.7rem 0 2.5rem;
-        background-image: url("../../assets/images/slider/slider-bg-mobile.png");
-        background-position: right bottom;
+        /* background-image: url("../../assets/images/slider/slider-bg-mobile.png"); */
+        /* background-position: right bottom; */
     }
 
     @media (min-width: 768px) {
@@ -20,7 +20,7 @@
     }
 
     @media (min-width: 1440px) {
-        background-position: calc(100% + 25px) 15px;
+        background-position: calc(100% - (100vw - 1210px) / 2 + 130px) 15px;
     }
 }
 
