--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -44,6 +44,10 @@
     background-color: var(--color-bg-dark);
 }
 
+.bg-accent {
+    background-color: var(--color-accent);
+}
+
 .rg-1 {
     row-gap: 1.1rem;
 }
@@ -56,6 +60,9 @@
 }
 .gap-10px {
     gap: 0.625rem;
+}
+.gap-14px {
+    gap: 0.875rem;
 }
 .gap-3 {
     gap: 1rem;
@@ -220,6 +227,12 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
+}
+
+.d-flex-start-end {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
 }
 
 .w-100 {
