--- a/template/css/ui.css
+++ b/template/css/ui.css
@@ -101,6 +101,10 @@
     padding: 0;
     border: none;
     transition: color var(--transition-03), transform 0.3s;
+
+    @media (min-width: 1024px) {
+        font-size: 1.125rem;
+    }
 }
 
 .btn-link:hover,
