--- a/template/css/common.css
+++ b/template/css/common.css
@@ -1121,13 +1121,6 @@ body.lock-scroll {
     font-size: var(--font-size-small);
 }
 
-.review-img {
-    /* overflow: hidden; */
-    /* display: inline-block; */
-    /* max-width: 186px; */
-    /* cursor: zoom-in; */
-}
-
 .review-img img {
     display: block;
     width: 100%;
@@ -1138,14 +1131,14 @@ body.lock-scroll {
     transition: transform var(--transition-03);
 }
 
-.review-img:hover img {
+/* .review-img:hover img {
     transform: scale(1.5) translateY(10%);
     cursor: zoom-out;
 
     @media (min-width: 768px) {
         transform: scale(1.5) translateX(-25%) translateY(25%);
     }
-}
+} */
 
 .review-img.zoomed img {
     transform: scale(1.5) translateY(10%);
@@ -1156,3 +1149,17 @@ body.lock-scroll {
     }
 }
 /* Reviews END*/
+
+/* Partners */
+.partners-slider__header {
+    margin-bottom: 1.5rem;
+}
+
+.swiper-slide.partner-slide::after {
+    background-color: var(--color-bg);
+}
+
+.partner-slide {
+    padding: 2rem 0;
+}
+/* Partners END*/
