--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -73,11 +73,15 @@
 .gap-5 {
     gap: 1.5rem;
 }
-.gap-6 {
+/* .gap-6 {
+    gap: 1.75rem;
+} */
+.gap-7 {
     gap: 2rem;
 }
-.gap-7 {
-    gap: 3rem;
+.row.g-6 {
+    --bs-gutter-x: 28px;
+    --bs-gutter-y: 28px;
 }
 /** bootstrap END */
 
@@ -98,6 +102,10 @@
 
 .mb-2rem {
     margin-bottom: 2rem;
+}
+
+.mb-40 {
+    margin-bottom: 2.5rem;
 }
 
 .gap-20-40 {
