--- a/template/css/ui.css
+++ b/template/css/ui.css
@@ -83,17 +83,19 @@
     padding: 12px 18px;
 }
 
-.btn-tab:hover,
-.btn-tab:active {
-    background-color: var(--color-accent);
-    color: var(--color-secondary);
-}
-
 .btn-primary-tab,
 .btn-tab {
     @media (min-width: 1024px) {
         font-size: 1.25rem;
         padding: 13px 24px;
+    }
+}
+
+@media (hover: hover) {
+    .btn-tab:hover,
+    .btn-tab:active {
+        background-color: var(--color-accent);
+        color: var(--color-secondary);
     }
 }
 
@@ -107,17 +109,36 @@
     }
 }
 
-.btn-link:hover,
-.btn-link:active {
+@media (hover: hover) {
+    .btn-link:hover {
+        background-color: transparent;
+        color: var(--color-accent);
+        transform: scale(0.98);
+    }
+}
+
+.btn-link:active,
+.btn-link:focus {
     background-color: transparent;
     color: var(--color-accent);
     transform: scale(0.98);
 }
 
-/* .btn-active {
-    background-color: var(--color-accent);
-    color: var(--color-secondary);
-} */
+.btn-info-toggle {
+    font-family: var(--font-secondary);
+    color: var(--color-font);
+    padding-bottom: 0.125rem;
+    border-bottom: 1px solid var(--color-font);
+}
+
+@media (hover: hover) {
+    .btn-info-toggle:hover,
+    .btn-info-toggle:focus,
+    .btn-info-toggle:active {
+        color: var(--color-accent);
+        border-bottom: 1px solid var(--color-accent);
+    }
+}
 
 .btn-icon {
     padding: 0;
