--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -213,22 +213,28 @@
     align-items: center;
 }
 
+.d-flex-between-start {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
 .d-flex-between-center {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+.d-flex-between-end {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
 .d-flex-center-center {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.d-flex-between-start {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
 }
 
 .d-flex-end-start {
