--- a/template/css/utility.css
+++ b/template/css/utility.css
@@ -108,6 +108,14 @@
     margin-bottom: 2.5rem;
 }
 
+/* .mb-20-40 {
+    margin-bottom: 1.25rem;
+
+    @media (min-width: 1024px) {
+        margin-bottom: 2.5rem;
+    }
+} */
+
 .gap-20-40 {
     gap: 1.25rem;
 
